mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      component: mongodb-instance
  template:
    metadata:
      labels:
        component: mongodb-instance
    spec: 
      volumes: 
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: databse-persistent-volume-claim
      containers:
        - name: mongo-db
          image: mongo
          ports: 
            - containerPort: 27017 
          volumeMounts:
            - name: mongo-storage
              mountPath: /var/lib/mongo/data
              subPath: mongo
