mongo-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mongo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mongodb-instance
  ports:
    - port: 27017
      targetPort: 27017
