reactive-server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: reactive-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: reactive-server
  ports:
    - port: 8080
      targetPort: 8080
